Realized ProductController and ProductService