@@ -1,5 +1,6 @@
 package com.order_manager.service;
 
+import com.order_manager.dto.OrderRequest;
 import com.order_manager.dto.OrderResponse;
 import com.order_manager.entity.OrderEntity;
 import com.order_manager.entity.OrderStatus;
@@ -13,7 +14,6 @@ import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,11 +25,11 @@ public class OrderService {
     private final NotificationService notificationService;
 
 
-    public OrderResponse createOrder(String username, List<Long> listOfProductId, int quantity) {
+    public OrderResponse createOrder(String username, OrderRequest request) {
         UserEntity user = userRepository.findByUsername(username)
                 .orElseThrow(() -> new EntityNotFoundException("User not found"));
 
-        List<ProductEntity> products = productRepository.findByIdIn(listOfProductId);
+        List<ProductEntity> products = productRepository.findByIdIn(request.listOfProductId());
         if (products.isEmpty()) {
             throw new EntityNotFoundException("No valid products found");
         }
@@ -37,7 +37,7 @@ public class OrderService {
         OrderEntity order = OrderEntity.builder()
                 .user(user)
                 .products(products)
-                .quantity(quantity)
+                .quantity(request.quantity())
                 .status(OrderStatus.PENDING)
                 .build();
 
@@ -48,8 +48,8 @@ public class OrderService {
     public List<OrderResponse> getOrdersForUser(String username) {
         return orderRepository.findByUserUsername(username)
                 .stream()
-                .map(OrderResponse::new)
-                .collect(Collectors.toList());
+                .map(this::mapToResponse)
+                .toList();
     }
 
     @Transactional
@@ -71,7 +71,7 @@ public class OrderService {
         }
     }
 
-    public OrderResponse mapToResponse(OrderEntity order) {
+    private OrderResponse mapToResponse(OrderEntity order) {
         return new OrderResponse(order);
     }
 }
